--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,16 @@
           ><span class="las la-cog"></span> <span>Business Rules</span></a
         >
       </li>
-
+      <li>
+        <a routerLink="transact_scheduler" class="nav-link" routerLinkActive="active"
+        ><span class="las la-cloud-sun"></span> <span>Transaction Scheduler</span></a
+      >
+      </li>
+      <li>
+        <a routerLink="staging_scheduler" class="nav-link" routerLinkActive="active"
+          ><span class="las la-cloud-sun"></span> <span>Staging Scheduler</span></a
+        >
+      </li>
       <li>
         <a href="" class="nav-link" routerLinkActive="active"
           ><span class="las la-user-circle"></span> <span>Account</span></a
